samples/_failures_safe/1761089921_bec85f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7f5430e.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_d7f5430e.c:153:5: error: expected expression at end of input
  153 |     while (parser->current.type == TOKEN_PLUS ||
      |     ^~~~~
./samples/SAFE/__tmp_d7f5430e.c:153:5: error: expected declaration or statement at end of input
